# zksvm

./: .env.example  .gitignore  README.md
onchain_verifier/: .gitignore  Anchor.toml  README.md  proof_for_onchain.json  risc0_proof_for_onchain.json  vk_snarkjs.json
onchain_verifier/programs/onchain_verifier/: Cargo.toml
onchain_verifier/programs/onchain_verifier/src/: lib.rs
onchain_verifier/tests/: README.md  onchain_verifier.ts
proof_risc0_verifier/: Anchor.toml  package-lock.json
proof_risc0_verifier/programs/proof_risc0_verifier/: Cargo.toml
proof_risc0_verifier/programs/proof_risc0_verifier/src/: lib.rs
proof_risc0_verifier/tests/: proof_risc0_verifier.ts
proof_verifier/: Cargo.toml
proof_verifier/src/: lib.rs
proof_verifier/src/instructions/: get_proof.rs  mod.rs  send_proof.rs
proof_verifier/src/state/: mod.rs  proof.rs
rollup_client/: Cargo.toml  README.md
rollup_client/keypairs/: user-one.json  user-two.json
rollup_client/src/: lib.rs  main.rs
rollup_client/tests/: integration_test.rs
rollup_core/: Cargo.toml  README.md
rollup_core/circuit/: batch_system_transfer.circom  system_transfer.circom
rollup_core/scripts/: setup_and_prove.sh
rollup_core/src/: frontend.rs  lib.rs  loader.rs  main.rs  processor.rs  rollupdb.rs  sequencer.rs  settle.rs  settler-keypair.json
rollup_web/: README.md  package-lock.json  package.json  tailwind.config.ts
rollup_web/app/: globals.css  layout.tsx  page.tsx
rollup_web/components/: batch-transaction-creator.tsx  transaction-creator.tsx
rollup_web/components/ui/: button.tsx
rollup_web/lib/: api.ts  utils.ts
rust-prover/: Cargo.toml  README.md
rust-prover/src/: main.rs  snarkjs.rs
