[package]
name = "rollup_core"
version = "0.1.0"
edition = "2021"
authors = [ "bheeeet" ]

[dependencies]
actix-web = "4.9.0"
tokio = {version = "1", features = ["full"]}
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
solana-svm = "2.0.7"
solana-program-runtime = "2.0.7"
solana-sdk = "2.0.7"
solana-client = "2.0.7"
solana-compute-budget = "2.0.7"
solana-bpf-loader-program = "2.0.7"
env_logger = "0.11.8"
log = "0.4.22"
anyhow = "1.0.86"
crossbeam = "0.8.4"
async-channel = "2.5.0"
solana-svm-feature-set= "2.3.6"
solana-svm-callback = "2.3.6"
solana-system-program = "2.3.6"
solana-fee-structure = "2.3.0"
solana-sdk-ids = "2.2.1"
solana-system-interface = "1.0.0"