[package]
name = "zk"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-std = { version = "0.5", features = ["std"] }
ark-ff = "0.5"
ark-bn254 = "0.5"
ark-relations = "0.5"
ark-r1cs-std = "0.5"
ark-groth16 = "0.5"
ark-snark = "0.5"
rand = "0.9.2"
ark-serialize = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
ark-ec = "0.5"