[package]
name = "proof_risc0_verifier"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_risc0_verifier"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
client = ["dep:risc0-zkvm", "dep:anyhow", "dep:ark-serialize", "dep:ark-bn254", "dep:num-bigint", "dep:serde"]
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"
anyhow = { version = "1.0.95", optional = true }
ark-bn254 = { version = "0.4.0", optional = true }
ark-serialize = { version = "0.4.2", optional = true }
hex-literal = "0.4.1"
num-bigint = { version = "0.4.6", optional = true }
risc0-zkvm = { version = "1.2.0", default-features = false, optional = true }
serde = { version = "1.0.204", features = ["derive"], optional = true }
solana-alt-bn128-bls = "0.1.0"
solana-bn254 = "3.0.0"

[dev-dependencies]
anyhow = "1.0.95"
ark-bn254 = "0.4.0"
ark-serialize = "0.4.2"
num-bigint = "0.4.6"
risc0-zkvm = { version = "1.2.0", default-features = false }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"

